	  - If a define isn't set, the pql_get_define() will return an empty array with
	    all rootdn's. Catch this, and return NULL if the define is unset.
	  - To make sure we don't get 'Wrong datatype' in tables/user_add-additional.inc
	    when checking if the mailHost is a DNS entry, we only look in the QLC
	    array if there IS such an array.

	GUI layout change
	  - Require the pql_config.inc file to avoid PHP errors in the right frame
	    when choosing control.php or ezmlm.php.

	Misc changes	
	  - The file 'doc/INSTALL' was moved to '.' so that it's easily seen.
	  - It's important that the 'person' object class is used when creating users
	    if one's referencing users with the 'cn' attribute.
	  - Don't show the 'undefined variable' warnings if not running a CVS version.
	  - Don't add the 'deliveryMode: localdelivery' if we're running with newer QmailLDAP.

phpQLAdmin 2.0.18b Release (Apr  6 2004)
	Bug fixes
	  - New config option - PQL_CONF_USE_TLS (true/false) which have to be true
	    for ldap_start_tls() to take place.

phpQLAdmin 2.0.18 Release (Apr  4 2004)
	Bug fixes
	  - PHP parse errors fixed.
	    Closes bug 67
	  - Don't use the Control class for Bind9. It looks in the wrong place
	    Closes bug 10
	  - Variable name overloading fixed.
	  - URL decode the domain value when creating the Group DN (pql_user_add()
	    function).
	    Closes bug 57, 70
	  - Wrongfull use of '$ACI_SUPPORT_ENABLED' (should have been
	    '$GLOBALS["ACI_SUPPORT_ENABLED"]').
	  - Fix folding for non-opera. Closes bug 76
	  - Create an array with the URL encoded values for user, rootdn and domain.
	    This is used in every (?) place where there's a distinction between value
	    and URL value (basicly in every 'a href')...
	  - Ability to view, add and delete additional groups (adding the users 'uid'
	    to the groups 'memberUid' attribute).
	    + Only visible if running in advanced mode.
	    Closes bug 71